--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.17.2
 monitor_speed = 115200
+build_flags =
+	-DDEBUGMODE
