--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,8 @@
 [env:esp12e]
 platform = espressif8266
 board = esp12e
+board_build.ldscript = eagle.flash.1m256.ld
+board_build.filesystem = littlefs
 framework = arduino
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.5
